them mot so tool debug/sql debug/artisan?cmd=db:seed debug/cmd

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,10 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.setting
+.svn
+.htaccess
+.project
+.buildpath
 .env
 composer.json
