--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "~3.3",
         "fzaninotto/faker": "^1.8",
         "laravel/framework": "5.5.*",
+        "laravel/socialite": "^3.1",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
