--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
             "database/seeds",
             "database/factories"
         ],
+        "files": [
+            "helpers/common.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         }
