--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "fzaninotto/faker": "^1.8",
         "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.1",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "unisharp/laravel-ckeditor": "^4.7"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
