--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
-        "popper.js": "^1.14.4"
+        "popper.js": "^1.14.4",
+        "react-redux": "^5.0.7",
+        "react-router-dom": "^4.3.1",
+        "redux": "^4.0.0",
+        "redux-thunk": "^2.3.0"
     }
 }
