--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "bootstrap": "^4.1.3",
         "popper.js": "^1.14.4",
+        "react-animated-slider": "^1.1.3",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.0",
