--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "react-animated-slider": "^1.1.3",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.3.1",
+        "react-slick": "^0.23.1",
         "redux": "^4.0.0",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "slick-carousel": "^1.8.1"
     }
 }
