--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-slick": "^0.23.1",
         "redux": "^4.0.0",
         "redux-thunk": "^2.3.0",
-        "slick-carousel": "^1.8.1"
+        "slick-carousel": "^1.8.1",
+        "socket.io-client": "^2.1.1"
     }
 }
