--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
+        "image-compressor.js": "^1.1.4",
         "popper.js": "^1.14.4",
         "qs": "^6.5.2",
         "react-animated-slider": "^1.1.3",
         "react-image-lightbox": "^5.0.0",
+        "react-image-resizer": "^1.3.0",
         "react-input-range": "^1.3.0",
         "react-redux": "^5.0.7",
         "react-responsive-modal": "^3.3.0",
