--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "popper.js": "^1.14.4",
         "qs": "^6.5.2",
         "react-animated-slider": "^1.1.3",
+        "react-countdown-now": "^1.3.0",
+        "react-dot-fragment": "^0.2.7",
         "react-image-lightbox": "^5.0.0",
         "react-image-resizer": "^1.3.0",
         "react-input-range": "^1.3.0",
