--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "~1.0",
+        "predis/predis": "^1.1",
         "unisharp/laravel-ckeditor": "^4.7"
     },
     "require-dev": {
