--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-redux": "^5.1.1",
         "react-responsive-modal": "^3.5.1",
         "react-router-dom": "^4.3.1",
+        "react-share": "^2.4.0",
         "react-slick": "^0.23.1",
         "redux": "^4.0.0",
         "redux-thunk": "^2.3.0",
