--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
+        "i18next": "^12.1.0",
         "image-compressor.js": "^1.1.4",
         "popper.js": "^1.14.5",
         "qs": "^6.5.2",
