--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "image-compressor.js": "^1.1.4",
         "popper.js": "^1.14.5",
         "qs": "^6.5.2",
+        "rc-progress": "^2.2.6",
         "react-animated-slider": "^1.1.3",
         "react-countdown-now": "^1.3.0",
         "react-dot-fragment": "^0.2.7",
+        "react-edit-inline": "^1.0.8",
         "react-image-lightbox": "^5.0.0",
         "react-image-resizer": "^1.3.0",
         "react-input-range": "^1.3.0",
@@ -36,6 +38,7 @@
         "react-router-dom": "^4.3.1",
         "react-share": "^2.4.0",
         "react-slick": "^0.23.1",
+        "react-toggle-display": "^2.2.0",
         "redux": "^4.0.0",
         "redux-thunk": "^2.3.0",
         "slick-carousel": "^1.8.1",
