--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-redux": "^5.1.1",
         "react-responsive-modal": "^3.5.1",
         "react-router-dom": "^4.3.1",
+        "react-select": "^2.1.2",
         "react-share": "^2.4.0",
         "react-slick": "^0.23.1",
         "react-toggle-display": "^2.2.0",
