--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bootstrap": "^4.1.3",
         "i18next": "^12.1.0",
         "image-compressor.js": "^1.1.4",
+        "nuka-carousel": "^4.4.4",
         "popper.js": "^1.14.5",
         "qs": "^6.5.2",
         "rc-progress": "^2.2.6",
@@ -34,6 +35,7 @@
         "react-image-lightbox": "^5.0.0",
         "react-image-resizer": "^1.3.0",
         "react-input-range": "^1.3.0",
+        "react-photo-gallery": "^6.2.2",
         "react-redux": "^5.1.1",
         "react-responsive-modal": "^3.5.1",
         "react-router-dom": "^4.3.1",
