--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^16.6.3"
     },
     "dependencies": {
+        "@tedconf/react-show-more": "^1.1.2",
         "bootstrap": "^4.1.3",
         "i18next": "^12.1.0",
         "image-compressor.js": "^1.1.4",
