--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react-select": "^2.1.2",
         "react-share": "^2.4.0",
         "react-slick": "^0.23.1",
+        "react-switch": "^3.0.4",
         "react-toggle-display": "^2.2.0",
         "redux": "^4.0.0",
         "redux-thunk": "^2.3.0",
