--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-image-lightbox": "^5.0.0",
         "react-image-resizer": "^1.3.0",
         "react-input-range": "^1.3.0",
+        "react-modal": "^3.8.1",
         "react-photo-gallery": "^6.2.2",
         "react-redux": "^5.1.1",
         "react-responsive-modal": "^3.5.1",
