--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-countdown-now": "^1.3.0",
         "react-dot-fragment": "^0.2.7",
         "react-edit-inline": "^1.0.8",
+        "react-icons": "^3.2.2",
         "react-image-lightbox": "^5.0.0",
         "react-image-resizer": "^1.3.0",
         "react-input-range": "^1.3.0",
