--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
         "bootstrap": "^4.1.3",
         "i18next": "^12.1.0",
         "image-compressor.js": "^1.1.4",
+        "moment": "^2.24.0",
         "nuka-carousel": "^4.4.4",
         "popper.js": "^1.14.5",
         "qs": "^6.5.2",
         "rc-progress": "^2.2.6",
         "react-animated-slider": "^1.1.3",
         "react-countdown-now": "^1.3.0",
+        "react-datepicker": "^2.0.0",
         "react-device-detect": "^1.6.1",
         "react-dot-fragment": "^0.2.7",
         "react-edit-inline": "^1.0.8",
