--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-device-detect": "^1.6.1",
         "react-dot-fragment": "^0.2.7",
         "react-edit-inline": "^1.0.8",
+        "react-editext": "^2.1.2",
         "react-icons": "^3.2.2",
         "react-image-lightbox": "^5.0.0",
         "react-image-resizer": "^1.3.0",
