--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
         "i18next": "^12.1.0",
         "image-compressor.js": "^1.1.4",
         "moment": "^2.24.0",
+        "moment-timezone": "^0.5.23",
         "nuka-carousel": "^4.4.4",
         "popper.js": "^1.14.5",
         "qs": "^6.5.2",
+        "rc-datepicker": "^5.0.13",
         "rc-progress": "^2.2.6",
         "react-animated-slider": "^1.1.3",
         "react-countdown-now": "^1.3.0",
-        "react-datepicker": "^2.0.0",
         "react-device-detect": "^1.6.1",
         "react-dot-fragment": "^0.2.7",
         "react-edit-inline": "^1.0.8",
@@ -42,6 +43,7 @@
         "react-image-resizer": "^1.3.0",
         "react-input-range": "^1.3.0",
         "react-modal": "^3.8.1",
+        "react-numeric-input": "^2.2.3",
         "react-photo-gallery": "^6.2.2",
         "react-redux": "^5.1.1",
         "react-responsive-modal": "^3.5.1",
@@ -50,6 +52,7 @@
         "react-share": "^2.4.0",
         "react-slick": "^0.23.1",
         "react-switch": "^3.0.4",
+        "react-times": "^3.1.10",
         "react-toggle-display": "^2.2.0",
         "redux": "^4.0.0",
         "redux-thunk": "^2.3.0",
