--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
         "react-dot-fragment": "^0.2.7",
         "react-edit-inline": "^1.0.8",
         "react-editext": "^2.1.2",
+        "react-grid-gallery": "^0.5.3",
         "react-icons": "^3.2.2",
         "react-image-lightbox": "^5.0.0",
         "react-image-resizer": "^1.3.0",
         "react-input-range": "^1.3.0",
         "react-modal": "^3.8.1",
         "react-numeric-input": "^2.2.3",
-        "react-photo-gallery": "^6.2.2",
         "react-redux": "^5.1.1",
         "react-responsive-modal": "^3.5.1",
         "react-router-dom": "^4.3.1",
