--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-icons": "^3.2.2",
         "react-image-lightbox": "^5.0.0",
         "react-image-resizer": "^1.3.0",
+        "react-infinite-scroller": "^1.2.4",
         "react-input-range": "^1.3.0",
         "react-modal": "^3.8.1",
         "react-numeric-input": "^2.2.3",
