--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react-infinite-scroller": "^1.2.4",
         "react-input-range": "^1.3.0",
         "react-modal": "^3.8.1",
+        "react-notifications": "^1.4.3",
         "react-numeric-input": "^2.2.3",
         "react-redux": "^5.1.1",
         "react-responsive-modal": "^3.5.1",
