--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-editext": "^2.1.2",
         "react-grid-gallery": "^0.5.3",
         "react-icons": "^3.2.2",
+        "react-image-carousel": "^2.0.18",
         "react-image-lightbox": "^5.0.0",
         "react-image-resizer": "^1.3.0",
         "react-infinite-scroller": "^1.2.4",
